Fix HTML formatting and paths in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
                 <a href="#offer" class="cta-button">Quero emagrecer agora</a>
             </div>
             <div class="hero-image">
-                <img src="img/hero.png" alt="Mulher feliz e em forma em casa">
+                <img src="./img/hero.png" alt="Mulher feliz e em forma em casa">
             </div>
         </div>
     </header>
@@ -179,7 +179,7 @@
                 </div>
             </div>
             <div class="benefits-image">
-                <img src="img/yoga.png" alt="Mulher fazendo exercícios leves em casa">
+                <img src="./img/yoga.png" alt="Mulher fazendo exercícios leves em casa">
             </div>
         </div>
     </section>
@@ -222,7 +222,7 @@
                 </div>
             </div>
             <div class="how-it-works-image">
-                <img src="img/food.png" alt="Alimentação saudável e equilibrada">
+                <img src="./img/food.png" alt="Alimentação saudável e equilibrada">
             </div>
             <div class="section-cta-wrapper">
                 <a href="#offer" class="cta-button">Quero emagrecer agora</a>
@@ -246,7 +246,7 @@
         <div class="container">
             <div class="proof-wrapper">
                 <div class="proof-image">
-                    <img src="img/portrait.png" alt="Mulher feliz e confiante">
+                    <img src="./img/portrait.png" alt="Mulher feliz e confiante">
                 </div>
                 <div class="proof-content">
                     <div class="stars">
