Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <div class="hero-content">
                 <h1>Emagreça em casa com um método simples, prático e sem academia</h1>
                 <p class="subtitle">Perca até 30kg em 30 dias! Um passo a passo para quem quer perder peso mesmo sem
-                    tempo e sem dietas malucas.
-                </p>
+                    tempo e sem dietas malucas.</p>
                 <a href="#offer" class="cta-button">Quero emagrecer agora</a>
             </div>
             <div class="hero-image">
@@ -105,8 +104,8 @@
                 <ul class="benefits-list">
                     <li>
                         <div class="check-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round"
                                 stroke-linejoin="round">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
@@ -119,8 +118,8 @@
                     </li>
                     <li>
                         <div class="check-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round"
                                 stroke-linejoin="round">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
@@ -133,8 +132,8 @@
                     </li>
                     <li>
                         <div class="check-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round"
                                 stroke-linejoin="round">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
@@ -147,8 +146,8 @@
                     </li>
                     <li>
                         <div class="check-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round"
                                 stroke-linejoin="round">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
@@ -161,8 +160,8 @@
                     </li>
                     <li>
                         <div class="check-icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round"
                                 stroke-linejoin="round">
                                 <polyline points="20 6 9 17 4 12"></polyline>
                             </svg>
@@ -174,7 +173,7 @@
                         </div>
                     </li>
                 </ul>
-                <div class="section-cta-wrapper" style="text-align: left; margin-top: 2rem;">
+                <div class="section-cta-wrapper">
                     <a href="#offer" class="cta-button">Quero emagrecer agora</a>
                 </div>
             </div>
@@ -249,12 +248,10 @@
                     <img src="./img/portrait.png" alt="Mulher feliz e confiante">
                 </div>
                 <div class="proof-content">
-                    <div class="stars">
-                        ★★★★★
-                    </div>
+                    <div class="stars">★★★★★</div>
                     <p class="main-proof">“Milhares de pessoas já começaram a aplicar esse método”</p>
                     <p class="sub-proof">Criado para quem busca praticidade e constância</p>
-                    <div class="section-cta-wrapper" style="text-align: left; margin-top: 1.5rem;">
+                    <div class="section-cta-wrapper" style="justify-content: flex-start; margin-top: 1.5rem;">
                         <a href="#offer" class="cta-button">Quero emagrecer agora</a>
                     </div>
                 </div>
@@ -267,11 +264,11 @@
         <div class="container">
             <div class="price-box">
                 <h2>Oferta Exclusiva</h2>
-                <p class="price-text">
+                <div class="price-text">
                     <span class="old-price">De R$ 119,00</span>
                     <span class="connector">por apenas</span>
                     <span class="new-price">R$ 97,00</span>
-                </p>
+                </div>
 
                 <ul class="price-checklist">
                     <li>✅ Perca até 30kg em 30 dias</li>
