Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -22,9 +22,54 @@
                 <p class="subtitle">Perca até 30kg em 30 dias! Um passo a passo para quem quer perder peso mesmo sem
                     tempo e sem dietas malucas.</p>
                 <a href="#offer" class="cta-button">Quero emagrecer agora</a>
+
+                <div class="hero-proof">
+                    <div class="hero-avatars">
+                        <span class="avatar-mini av-1">MS</span>
+                        <span class="avatar-mini av-2">FO</span>
+                        <span class="avatar-mini av-3">JM</span>
+                        <span class="avatar-mini av-4">+2k</span>
+                    </div>
+                    <div class="hero-proof-text">
+                        <div class="stars-mini">★★★★★</div>
+                        <p>Aprovado por mais de 2.000 alunas</p>
+                    </div>
+                </div>
             </div>
             <div class="hero-image">
                 <img src="./img/hero.png" alt="Mulher feliz e em forma em casa">
+
+                <!-- Floating Message 1 -->
+                <div class="floating-card card-1">
+                    <div
+                        style="background: #D1FAE5; color: #065F46; width:32px; height:32px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold; font-size:12px;">
+                        AS</div>
+                    <p>"Perdi 3kg na primeira semana! ❤️"</p>
+                </div>
+
+                <!-- Floating Message 2 -->
+                <div class="floating-card card-2">
+                    <div
+                        style="background: #DBEAFE; color: #1E40AF; width:32px; height:32px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold; font-size:12px;">
+                        CR</div>
+                    <p>"Método muito prático 👏"</p>
+                </div>
+
+                <!-- Floating Message 3 -->
+                <div class="floating-card card-3">
+                    <div
+                        style="background: #FEF3C7; color: #B45309; width:32px; height:32px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold; font-size:12px;">
+                        LM</div>
+                    <p>"Energia a mil! ⚡"</p>
+                </div>
+
+                <!-- Floating Message 4 -->
+                <div class="floating-card card-4">
+                    <div
+                        style="background: #FCE7F3; color: #BE185D; width:32px; height:32px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-weight:bold; font-size:12px;">
+                        BP</div>
+                    <p>"Amei os cardápios 🥗"</p>
+                </div>
             </div>
         </div>
     </header>
@@ -78,6 +123,26 @@
             </div>
             <div class="section-cta-wrapper">
                 <a href="#offer" class="cta-button">Quero emagrecer agora</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Mid Stats Section -->
+    <section class="stats-banner">
+        <div class="container">
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <h3>+2.000</h3>
+                    <p>Alunas Transformadas</p>
+                </div>
+                <div class="stat-item">
+                    <h3>4.9/5</h3>
+                    <p>Nota de Satisfação</p>
+                </div>
+                <div class="stat-item">
+                    <h3>30 Dias</h3>
+                    <p>Para Ver Resultados</p>
+                </div>
             </div>
         </div>
     </section>
@@ -243,18 +308,87 @@
     <!-- Social Proof Section -->
     <section class="social-proof">
         <div class="container">
-            <div class="proof-wrapper">
-                <div class="proof-image">
-                    <img src="./img/portrait.png" alt="Mulher feliz e confiante">
-                </div>
-                <div class="proof-content">
-                    <div class="stars">★★★★★</div>
-                    <p class="main-proof">“Milhares de pessoas já começaram a aplicar esse método”</p>
-                    <p class="sub-proof">Criado para quem busca praticidade e constância</p>
-                    <div class="section-cta-wrapper" style="justify-content: flex-start; margin-top: 1.5rem;">
-                        <a href="#offer" class="cta-button">Quero emagrecer agora</a>
+            <div class="social-proof-header">
+                <h2>O que dizem nossas alunas</h2>
+                <p>Histórias reais de quem decidiu mudar de vida</p>
+            </div>
+
+            <div class="testimonials-grid">
+                <!-- Testimonial 1 -->
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <div class="user-avatar avatar-1">MS</div>
+                        <div class="user-info">
+                            <h4>Maria Silva</h4>
+                            <span>42 anos</span>
+                        </div>
+                        <div class="verified-badge">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                            </svg>
+                            Verificada
+                        </div>
                     </div>
+                    <div class="stars">★★★★★</div>
+                    <p class="testimonial-text">“Eu achava que não tinha tempo, mas as aulas são curtas e direto ao
+                        ponto. Perdi 4kg logo na primeira semana! Finalmente algo que funciona pra quem trabalha fora e
+                        tem filhos.”</p>
                 </div>
+
+                <!-- Testimonial 2 -->
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <div class="user-avatar avatar-2">FO</div>
+                        <div class="user-info">
+                            <h4>Fernanda Oliveira</h4>
+                            <span>55 anos</span>
+                        </div>
+                        <div class="verified-badge">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                            </svg>
+                            Verificada
+                        </div>
+                    </div>
+                    <div class="stars">★★★★★</div>
+                    <p class="testimonial-text">“Depois dos 50, pensei que meu metabolismo tinha parado. Esse método me
+                        mostrou que eu estava errada. Voltei a usar calças que não serviam há anos. Me sinto renovada e
+                        com muito mais energia!”</p>
+                </div>
+
+                <!-- Testimonial 3 -->
+                <div class="testimonial-card">
+                    <div class="testimonial-header">
+                        <div class="user-avatar avatar-3">JM</div>
+                        <div class="user-info">
+                            <h4>Juliana Mendes</h4>
+                            <span>29 anos</span>
+                        </div>
+                        <div class="verified-badge">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round">
+                                <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
+                                <polyline points="22 4 12 14.01 9 11.01"></polyline>
+                            </svg>
+                            Verificada
+                        </div>
+                    </div>
+                    <div class="stars">★★★★★</div>
+                    <p class="testimonial-text">“O melhor investimento que fiz. Sem academia, sem dieta maluca. Só
+                        apliquei o passo a passo e o resultado veio mais rápido do que imaginei. As receitas são
+                        deliciosas e fáceis!”</p>
+                </div>
+            </div>
+
+            <div class="section-cta-wrapper">
+                <a href="#offer" class="cta-button">Quero ter esses resultados</a>
             </div>
         </div>
     </section>
